--- a/content/2.part.tex
+++ b/content/2.part.tex
@@ -1,29 +1,46 @@
-\section{Part 2}
+\section{Perspectives and Challenges Faced by Individuals with Autism Spectrum Disorder (ASD) in Transportation}
+    
+\subsection{Challenges Encountered}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel nunc ultricies, lobortis leo a, mattis sapien. Duis nec sapien a diam sollicitudin consectetur. Etiam magna lorem, vulputate at fermentum sed, hendrerit nec metus. Integer ut nunc elit. Cras tristique finibus porttitor. Aliquam fringilla ipsum eget condimentum vehicula. Sed ac tellus ac erat sagittis ullamcorper quis a leo. Nulla sed elit tincidunt, posuere velit sed, fringilla quam. Praesent facilisis eros nec leo luctus, in mattis quam rhoncus.
+    Among the multiple difficulties faced by this population, a study on experiences of young autistic people on transportation realised by Sydney and Curtin Universities \cite{haas_experiences_nodate} demonstrate that anxiety and stress are the most common challenges faced by young adults with ASD on their daily experiences with transportation. This anxiety is rooted in the constant fear of making errors during travel, like missing crucial stops, and navigating the uncertainty of potential modifications to their transportation routines. This heightened emotional state adds layers of complexity to their routine activity. 
+    This study also confirms that sensory challenges emerge as another barrier, encapsulating issues such as balance and motion sickness, sensitivity to environmental noise, tactile sensations, lights, and smells encountered during public transport journeys. These sensory complications further intensify the challenges faced by individuals with ASD, making routine travel a daunting prospect. 
 
-Phasellus lorem erat, aliquet at dapibus in, egestas at justo. Cras a lectus eget libero faucibus cursus. Nulla et facilisis dui. In orci odio, faucibus a ultricies eu, finibus ut massa. Praesent ac sem volutpat, tempor risus quis, aliquet turpis. In hac habitasse platea dictumst. Vestibulum laoreet, justo id semper eleifend, augue dui molestie ligula, id varius erat mi a quam. Etiam cursus, justo ac lobortis viverra, nibh neque faucibus nibh, ut laoreet nulla ligula quis neque. Nam ornare felis nisi, sit amet vulputate lorem varius at. Vestibulum tincidunt, ex eget finibus pulvinar, magna sapien convallis ante, quis mollis nisl ex ac mi. Etiam vestibulum dui a lorem vulputate, et cursus mauris dictum. Donec porta molestie tincidunt. Proin euismod libero turpis, sed iaculis magna posuere nec. Ut non dolor nisl. Donec a tellus pulvinar, luctus dolor vel, ultrices sem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+    Another study directed by the State University of New Jersey \cite{deka_co-principal_nodate}arises a significant concern from the heavy dependency on parents and caregivers for transportation, creating a dynamic that introduces inconveniences and stress for both adults with ASD and their immediate support circles. This dependence not only impacts their autonomy but also has wider implications for the flexibility and convenience of their daily lives.
+    The transition period after the conclusion of school, typically around age 21, displays another layer of challenges, as government support and school transportation cease, thrusting individuals with ASD and their families into a realm of newfound transportation complexities. 
+    Limited walking skills among many adults with ASD further contribute to their reliance on others for transportation, impeding their capacity to navigate public spaces independently. 
+    The study also brings up the safety concerns associated with driving, particularly from the perspective of concerned parents, despite an expressed interest in obtaining a driver's license for the sake of independence. 
 
-\subsection{Subsection 1}
+    Moreover, specific concerns about crowding and safety emerge as tangible barriers to public transport for individuals with ASD, while neurotypical adults grapple with obstacles related to service location and timing, as shown in a study realised in Melbourne and Perth \cite{falkmer_viewpoints_2015}. 
+    
+    These multifaceted challenges underscore the urgency for targeted interventions and comprehensive strategies to enhance the transportation experiences of individuals with ASD, ultimately fostering greater independence, accessibility, and inclusion within the broader community.
 
-Cras commodo, elit at fermentum tincidunt, velit urna feugiat leo, in varius est magna in lectus. Curabitur sodales, libero et dapibus placerat, dolor arcu egestas lectus, accumsan mattis orci ante et est. Etiam maximus maximus ante vitae elementum. Praesent volutpat mauris eget sapien pretium, a consequat mi mattis. Phasellus ac lobortis odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Vestibulum tincidunt tristique semper.
+\subsection{Current Adaptations}
 
-Nullam faucibus eu risus nec accumsan. In vitae augue rhoncus, iaculis nunc non, dapibus massa. In laoreet quis ante ac porta. Morbi eget lorem scelerisque, accumsan felis sit amet, cursus nisl. Etiam vitae orci tristique, sollicitudin odio in, varius metus. Nullam massa risus, molestie eget dictum mattis, placerat vel risus. Aenean consequat tristique libero ac rutrum. Integer fringilla facilisis felis, non accumsan erat accumsan a. Nunc vitae lorem id ligula dapibus convallis at ut nisl. Mauris consectetur urna quam, nec egestas erat suscipit in.
+   To mitigate those challenges, individuals with Autism Spectrum Disorder (ASD) employ a range of adaptive strategies to navigate within public transports. 
+   
+   Leveraging their support circles, including family members and caregivers, proves instrumental in mitigating the stress and anxiety often linked to travel \cite{deka_co-principal_nodate}. 
+   
+   Planning ahead becomes a cornerstone strategy \cite{haas_experiences_nodate}, allowing these individuals to anticipate potential modifications and familiarize themselves with routes, instilling a sense of control.
+   Avoiding crowded spaces, choosing off-peak hours, and developing heightened spatial awareness are additional strategies aimed at minimizing stress during public transport journeys.
+   Some individuals find comfort in utilizing bicycles for short-distance travel \cite{falkmer_viewpoints_2015}, fostering a sense of autonomy. The inclination towards self-reliance is evident, as participants express a preference for drawing on personal coping mechanisms rather than seeking external help. Establishing routines and adhering to predictability emerge as effective coping mechanisms, reducing anxiety by introducing familiarity into their travel experiences. 
+   
+   Technological tools, such as smartphones and applications, play a crucial role in aiding individuals with ASD in planning routes, checking transportation schedules, and enhancing their independence during travel. 
+   Managing sensory challenges involves the use of music or headphones to create a controlled auditory environment, providing relief from noise sensitivity \cite{haas_experiences_nodate}. 
+   
+   Overall, these adaptive strategies underscore the resilience and resourcefulness of individuals with ASD as they navigate the complexities of public transportation.
 
-\subsection{Subsection 2}
+\subsection{Expectations and Envisaged Solutions}
 
-Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec et maximus dui. Proin bibendum dolor turpis, nec eleifend purus pharetra in. Cras mattis, nisl sit amet varius suscipit, dolor eros imperdiet risus, et blandit arcu tellus eget nunc. Vivamus eu nibh vitae lectus tristique ullamcorper quis in odio. Sed non enim sit amet lacus porta tincidunt. Ut eget facilisis eros, et eleifend nisl. In tincidunt mattis tellus in varius. Sed felis eros, sollicitudin eget purus ultrices, tempor malesuada est. Ut egestas erat et velit tempor viverra. Aenean quis imperdiet nisi. Aliquam varius vestibulum nibh sit amet euismod. Duis massa lectus, efficitur vitae porttitor id, sodales nec quam. Suspendisse aliquet mattis metus, ac dignissim nulla ultricies in. Nulla a commodo orci.
+    Individuals with Autism Spectrum Disorder advocate for a comprehensive set of expectations and corresponding solutions to confront the challenges entwined with transportation. 
+    
+    At the forefront of their aspirations is the collective desire for a reduction in anxiety and stress during travel, underscoring the urgent need for the implementation of sensory-friendly measures \cite{deka_co-principal_nodate}. This includes quieter travel options, dedicated spaces tailored to sensory sensitivities, and clear communication practices to mitigate uncertainty.
+    The overarching expectation of improved accessibility fuels a demand for the incorporation of universal design principles into transportation infrastructure, ensuring facilities and services cater to diverse abilities.
+    
+    The shared need of increased independence prompts a call for the development of cutting-edge technologies, user-friendly apps, and robust training programs. These initiatives aim to empower individuals with ASD to navigate public spaces autonomously. 
+    Notably, the prospect of a smooth transition after school elicits a call for integrated travel education within school curricula, specifically embedded in "Individualized Education Programs" \cite{deka_co-principal_nodate}. 
+    Addressing the burgeoning interest in driving involves tailoring driver education programs to assuage safety concerns and foster autonomy \cite{deka_co-principal_nodate}. 
+    
+    Societal expectations revolve around heightened awareness, calling for collaborative awareness campaigns designed to educate the general public on the unique needs of individuals with ASD \cite{deka_co-principal_nodate}. Collaboration and integration take center stage, advocating for the establishment of protocols that foster sustainable transportation infrastructure in partnership with Non-Governmental Organizations and dedicated researchers \cite{deka_co-principal_nodate}. 
+    The expectation of adopting best practices underscores a global perspective, urging the initiation of global studies to identify and replicate successful strategies. Specialized training for transportation staff becomes a focal point, emphasizing collaboration with the ASD stakeholder community to craft effective training modules. 
 
-Mauris vitae libero odio. Praesent nec eros sem. Ut aliquet vestibulum lorem ac venenatis. Maecenas feugiat, est at suscipit luctus, velit purus laoreet mauris, eu pharetra eros neque a lacus. Duis cursus quis purus ac accumsan. Praesent ullamcorper porta libero, quis ultrices enim porttitor sollicitudin. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas non euismod purus, ac suscipit nibh. Donec in massa aliquet, vestibulum libero eu, fermentum sapien. Mauris consequat imperdiet eros ut elementum. Nulla euismod, enim id malesuada gravida, purus lectus imperdiet nibh, sit amet ullamcorper metus nunc nec nulla. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eu mauris sit amet diam suscipit venenatis. Vestibulum ut leo ac metus fermentum porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-
-\subsection{Subsection 3}
-
-Proin gravida eros id faucibus sollicitudin. Vivamus molestie, nisi nec blandit viverra, eros arcu porttitor nibh, a vestibulum est urna ut mi. Donec vel nisl vitae odio ullamcorper tempor eu eu libero. Nullam sem nisi, varius ut nunc vel, luctus cursus dui. Proin cursus euismod sem tincidunt dignissim. Suspendisse volutpat arcu eu scelerisque facilisis. Donec id ultricies sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-
-Donec at elit vehicula, varius nisl ac, malesuada ante. Mauris ut iaculis enim. Quisque faucibus nibh id dui hendrerit sagittis. Suspendisse non mauris a purus aliquet iaculis. Aliquam erat volutpat. Vestibulum augue sem, pretium quis dapibus sit amet, pretium sed urna. Donec at lectus dui. Ut imperdiet augue eget odio vehicula ullamcorper. Maecenas sed enim quis nunc porttitor eleifend. Aenean et mollis nibh. Integer id posuere odio. Sed et porttitor metus, a semper mi. Mauris egestas odio in posuere mollis. Praesent pellentesque, dolor nec aliquam dictum, ex lectus cursus sapien, vehicula ornare urna ipsum non massa.
-
-\subsection{Subsection 4}
-
-Quisque ut risus neque. Praesent iaculis finibus porttitor. Sed rutrum diam eget gravida imperdiet. Sed at ex velit. Ut ut dictum sem. Pellentesque a tincidunt lorem. Sed tincidunt metus nec auctor semper. Phasellus vestibulum auctor justo a pretium. Nam eu tincidunt dui, at scelerisque ante. Phasellus dapibus lacus at tempus pellentesque.
-
-Vivamus mattis porta mi iaculis sagittis. Aenean sit amet rutrum nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque quis libero imperdiet, consectetur felis sed, venenatis augue. Nulla tempor rutrum viverra. Proin non dictum urna. Mauris mattis finibus neque, quis tincidunt libero vulputate eu. Praesent lobortis fermentum faucibus. Donec eget neque eu enim aliquam mattis. Praesent a eleifend ante. Suspendisse auctor enim sit amet malesuada malesuada. Aenean molestie lacus sed velit ornare malesuada. Nam sagittis pretium interdum. 
+    The desire for service expansion, coupled with the creation of a dedicated statewide mobility manager, signifies a collective plea for comprehensive, inclusive, and tailored strategies to address the diverse needs of individuals with ASD in the realm of transportation.
