--- a/content/2.part.tex
+++ b/content/2.part.tex
@@ -20,12 +20,10 @@
    
    Leveraging their support circles, including family members and caregivers, proves instrumental in mitigating the stress and anxiety often linked to travel \cite{deka_co-principal_nodate}. 
    
-   Planning ahead becomes a cornerstone strategy \cite{haas_experiences_nodate}, allowing these individuals to anticipate potential modifications and familiarize themselves with routes, instilling a sense of control.
-   Avoiding crowded spaces, choosing off-peak hours, and developing heightened spatial awareness are additional strategies aimed at minimizing stress during public transport journeys.
-   Some individuals find comfort in utilizing bicycles for short-distance travel \cite{falkmer_viewpoints_2015}, fostering a sense of autonomy. The inclination towards self-reliance is evident, as participants express a preference for drawing on personal coping mechanisms rather than seeking external help. Establishing routines and adhering to predictability emerge as effective coping mechanisms, reducing anxiety by introducing familiarity into their travel experiences. 
+   Planning ahead becomes a cornerstone strategy \cite{haas_experiences_nodate}, allowing these individuals to anticipate potential modifications and familiarize themselves with routes, instilling a sense of control. Avoiding crowded spaces, choosing off-peak hours, and developing heightened spatial awareness are additional strategies aimed at minimizing stress during public transport journeys.
+   Some individuals find comfort in utilizing bicycles for short-distance travel \cite{falkmer_viewpoints_2015}, fostering a sense of autonomy. The inclination towards self-reliance is evident, as participants express a preference for drawing on personal coping mechanisms rather than seeking external help. Establishing routines and adhering to predictability emerge as effective coping mechanisms \cite{falkmer_viewpoints_2015}, reducing anxiety by introducing familiarity into their travel experiences. 
    
-   Technological tools, such as smartphones and applications, play a crucial role in aiding individuals with ASD in planning routes, checking transportation schedules, and enhancing their independence during travel. 
-   Managing sensory challenges involves the use of music or headphones to create a controlled auditory environment, providing relief from noise sensitivity \cite{haas_experiences_nodate}. 
+   Technological tools, such as smartphones and applications, play a crucial role in aiding individuals with ASD in planning routes, checking transportation schedules, and enhancing their independence during travel. Managing sensory challenges involves the use of music or headphones to create a controlled auditory environment, providing relief from noise sensitivity \cite{haas_experiences_nodate}. 
    
    Overall, these adaptive strategies underscore the resilience and resourcefulness of individuals with ASD as they navigate the complexities of public transportation.
 
