--- a/content/2.part.tex
+++ b/content/2.part.tex
@@ -1,44 +1,47 @@
-\section{Perspectives and Challenges Faced by Individuals with Autism Spectrum Disorder (ASD) in Transportation}
+\section{Perspectives and Challenges Faced by Individuals with Autism Spectrum Disorder (ASD) in public Transportation}
     
-\subsection{Challenges Encountered}
+\subsection{Encountered Challenges}
 
-    Among the multiple difficulties faced by this population, a study on experiences of young autistic people on transportation realised by Sydney and Curtin Universities \cite{haas_experiences_nodate} demonstrate that anxiety and stress are the most common challenges faced by young adults with ASD on their daily experiences with transportation. This anxiety is rooted in the constant fear of making errors during travel, like missing crucial stops, and navigating the uncertainty of potential modifications to their transportation routines. This heightened emotional state adds layers of complexity to their routine activity. 
-    This study also confirms that sensory challenges emerge as another barrier, encapsulating issues such as balance and motion sickness, sensitivity to environmental noise, tactile sensations, lights, and smells encountered during public transport journeys. These sensory complications further intensify the challenges faced by individuals with ASD, making routine travel a daunting prospect. 
-
-    Another study directed by the State University of New Jersey \cite{deka_co-principal_nodate}arises a significant concern from the heavy dependency on parents and caregivers for transportation, creating a dynamic that introduces inconveniences and stress for both adults with ASD and their immediate support circles. This dependence not only impacts their autonomy but also has wider implications for the flexibility and convenience of their daily lives.
-    The transition period after the conclusion of school, typically around age 21, displays another layer of challenges, as government support and school transportation cease, thrusting individuals with ASD and their families into a realm of newfound transportation complexities. 
-    Limited walking skills among many adults with ASD further contribute to their reliance on others for transportation, impeding their capacity to navigate public spaces independently. 
-    The study also brings up the safety concerns associated with driving, particularly from the perspective of concerned parents, despite an expressed interest in obtaining a driver's license for the sake of independence. 
-
-    Moreover, specific concerns about crowding and safety emerge as tangible barriers to public transport for individuals with ASD, while neurotypical adults grapple with obstacles related to service location and timing, as shown in a study realised in Melbourne and Perth \cite{falkmer_viewpoints_2015}. 
+    Anxiety and stress are common challenges that people with ASD face while taking transport on a regular basis \cite{haas_experiences_nodate}. Stress stems from the worry that they could commit mistakes when travelling, such as skipping important stops or not knowing if their regular transit plans will change. Their daily tasks become more challenging as a consequence of their elevated emotional state. 
+    Moreover, ASD may causes balance and motion sickness, sensitivity to noise in the surrounding environment, tactile perception, lighting or smells. They appear as an additional barrier when using public transportation and make public transportation frightening.
+\newline
+\newline
+    Many people with ASD feel forced to rely on parents and caregivers. However, another significant concern comes from this heavy dependency on family for transportation. This dynamic induces inconvenience and stress for both adults with ASD and their immediate support circle \cite{deka_co-principal_nodate}. This reliance affects their autonomy but also has broader consequences on the convenience and flexibility of their everyday live. 
+    The phase of transition following school completion, usually around age 21, presents an additional set of difficulties. As school transportation and government support end,  people with ASD and their families enter a world of newly discovered transportation complexity.
+    Many individuals with ASD have limited walking skills, which makes it harder for them to get around freely in public places and increases their dependency on others for transportation.
+    The safety concerns associated with driving is alarming, particularly from the perspective of concerned parents, despite an expressed interest in obtaining a driver's license for the sake of independence. 
+\newline
+\newline
+    Furthermore, specific worries about crowding and safety are real roadblocks for people with ASD to use public transportation. Neurotypical adults also struggle with service location and timing\cite{falkmer_viewpoints_2015}.
     
-    These multifaceted challenges underscore the urgency for targeted interventions and comprehensive strategies to enhance the transportation experiences of individuals with ASD, ultimately fostering greater independence, accessibility, and inclusion within the broader community.
 
 \subsection{Current Adaptations}
 
-   To mitigate those challenges, individuals with Autism Spectrum Disorder (ASD) employ a range of adaptive strategies to navigate within public transports. 
-   
-   Leveraging their support circles, including family members and caregivers, proves instrumental in mitigating the stress and anxiety often linked to travel \cite{deka_co-principal_nodate}. 
-   
-   Planning ahead becomes a cornerstone strategy \cite{haas_experiences_nodate}, allowing these individuals to anticipate potential modifications and familiarize themselves with routes, instilling a sense of control. Avoiding crowded spaces, choosing off-peak hours, and developing heightened spatial awareness are additional strategies aimed at minimizing stress during public transport journeys.
-   Some individuals find comfort in utilizing bicycles for short-distance travel \cite{falkmer_viewpoints_2015}, fostering a sense of autonomy. The inclination towards self-reliance is evident, as participants express a preference for drawing on personal coping mechanisms rather than seeking external help. Establishing routines and adhering to predictability emerge as effective coping mechanisms \cite{falkmer_viewpoints_2015}, reducing anxiety by introducing familiarity into their travel experiences. 
-   
-   Technological tools, such as smartphones and applications, play a crucial role in aiding individuals with ASD in planning routes, checking transportation schedules, and enhancing their independence during travel. Managing sensory challenges involves the use of music or headphones to create a controlled auditory environment, providing relief from noise sensitivity \cite{haas_experiences_nodate}. 
-   
-   Overall, these adaptive strategies underscore the resilience and resourcefulness of individuals with ASD as they navigate the complexities of public transportation.
+   To mitigate those difficulties, people with ASD use a variety of adaptive techniques when navigating public transportation. 
+   \newline
+   \newline
+   One of the most widely spread strategies is avoiding public transportation completely and using their support networks, which include family and caregivers\cite{deka_co-principal_nodate}. This approach helps reducing stress and anxiety normally associated with travel. However, as explained above, it makes them strongly dependent on others to travel, narrowing their independence. 
+   \newline
+   \newline
+    Another important strategy is to carefully plan their route in advance \cite{haas_experiences_nodate}. This helps people with ASD to know where to go and anticipate changes, which gives them a sense of control. Other tactics used to reduce stress when using public transportation include avoiding crowded areas or selecting off-peak hours.
+\newline
+\newline
+   Rather than using public transport, some individuals find comfort in utilizing bicycles for short-distance travel \cite{falkmer_viewpoints_2015} for more autonomy. They usually lean towards self-reliance and express a preference for drawing on personal coping mechanisms rather than seeking external help. Another effective coping mechanism consists in setting up routines\cite{falkmer_viewpoints_2015}, which reduces anxiety by introducing familiarity into their travel experiences. 
+   \newline
+   \newline
+   The use of technological tools, such as smartphone applications, plays a crucial role in helping individuals with ASD. It helps them to plan paths and to check transportation schedules. It also enhances their independence during travel. To manage sensory challenges, music and headphones provides them a controlled auditory environment and relief from noise sensitivity \cite{haas_experiences_nodate}. 
+
 
 \subsection{Expectations and Envisaged Solutions}
 
-    Individuals with Autism Spectrum Disorder advocate for a comprehensive set of expectations and corresponding solutions to confront the challenges entwined with transportation. 
-    
-    At the forefront of their aspirations is the collective desire for a reduction in anxiety and stress during travel, underscoring the urgent need for the implementation of sensory-friendly measures \cite{deka_co-principal_nodate}. This includes quieter travel options, dedicated spaces tailored to sensory sensitivities, and clear communication practices to mitigate uncertainty.
-    The overarching expectation of improved accessibility fuels a demand for the incorporation of universal design principles into transportation infrastructure, ensuring facilities and services cater to diverse abilities.
-    
-    The shared need of increased independence prompts a call for the development of cutting-edge technologies, user-friendly apps, and robust training programs. These initiatives aim to empower individuals with ASD to navigate public spaces autonomously. 
-    Notably, the prospect of a smooth transition after school elicits a call for integrated travel education within school curricula, specifically embedded in "Individualized Education Programs" \cite{deka_co-principal_nodate}. 
-    Addressing the burgeoning interest in driving involves tailoring driver education programs to assuage safety concerns and foster autonomy \cite{deka_co-principal_nodate}. 
-    
-    Societal expectations revolve around heightened awareness, calling for collaborative awareness campaigns designed to educate the general public on the unique needs of individuals with ASD \cite{deka_co-principal_nodate}. Collaboration and integration take center stage, advocating for the establishment of protocols that foster sustainable transportation infrastructure in partnership with Non-Governmental Organizations and dedicated researchers \cite{deka_co-principal_nodate}. 
-    The expectation of adopting best practices underscores a global perspective, urging the initiation of global studies to identify and replicate successful strategies. Specialized training for transportation staff becomes a focal point, emphasizing collaboration with the ASD stakeholder community to craft effective training modules. 
-
-    The desire for service expansion, coupled with the creation of a dedicated statewide mobility manager, signifies a collective plea for comprehensive, inclusive, and tailored strategies to address the diverse needs of individuals with ASD in the realm of transportation.
+    The main expectation of individuals with ASD is to reduce the stress and anxiety felt in transit, by implementing sensory-friendly measures \cite{haas_experiences_nodate}. These measures can include  less noisy optional journeys or the installation of dedicated areas for people with sensory sensitivities. They also have a strong demand for clear communication practices in transport, to reduce the stress caused by uncertainty.
+    \newline
+    \newline
+    People with ASD also want universal design principles to be implemented in transport infrastructures \cite{haas_experiences_nodate} to facilitate access for everyone, whatever their disability. This would improve public transport overall, for all users.
+    \newline
+    \newline
+    To help them gain independence in their daily journeys, people with ASD hope that new technologies will simplify their everyday live, with dedicated applications. They also expect robust training programs to help them navigate public spaces autonomously. Those programs should start in school curricula, to smoothen the transition between school and adult life \cite{deka_co-principal_nodate}. They also think that tailoring driver education programs should spread to address the existing interest in driving \cite{deka_co-principal_nodate}. 
+    \newline
+    \newline
+    Their latest requests concern the general understanding of ASD and what is implied with it. They would like the set up of public education campaigns to enhance awareness among the general population about the characteristics of ASD. Those awareness campaigns will aim to facilitate community integration for adults with ASD. \cite{deka_co-principal_nodate}. They also want targeted training modules for transportation staff, like vehicle operators or front-line staff, so that people with ASD are easily understood and assisted \cite{haas_experiences_nodate}. 
+\newline
