--- a/content/2.part.tex
+++ b/content/2.part.tex
@@ -12,7 +12,7 @@
     The safety concerns associated with driving is alarming, particularly from the perspective of concerned parents, despite an expressed interest in obtaining a driver's license for the sake of independence. 
 \newline
 \newline
-    Furthermore, specific worries about crowding and safety are real roadblocks for people with ASD to use public transportation. Neurotypical adults also struggle with service location and timing\cite{falkmer_viewpoints_2015}.
+    Furthermore, specific worries about crowding and safety are real roadblocks for people with ASD to use public transportation \cite{falkmer_viewpoints_2015}.
     
 
 \subsection{Current Adaptations}
@@ -34,14 +34,14 @@
 
 \subsection{Expectations and Envisaged Solutions}
 
-    The main expectation of individuals with ASD is to reduce the stress and anxiety felt in transit, by implementing sensory-friendly measures \cite{haas_experiences_nodate}. These measures can include  less noisy optional journeys or the installation of dedicated areas for people with sensory sensitivities. They also have a strong demand for clear communication practices in transport, to reduce the stress caused by uncertainty.
+    Individuals with ASD are exposed to a lot of anxiety during transportation. In order to reduce the anxiety felt in transit, sensory-friendly measures specially tailored for them would be implemented \cite{haas_experiences_nodate}. These measures should include the selection of less noisy paths for transport or the installation of dedicated areas for people with sensory sensitivities. Straightforward communication from transport companies would also reduce stress caused by uncertainty and randomness.
     \newline
     \newline
-    People with ASD also want universal design principles to be implemented in transport infrastructures \cite{haas_experiences_nodate} to facilitate access for everyone, whatever their disability. This would improve public transport overall, for all users.
+    People with ASD would feel better if universal design principles were implemented in transport infrastructures \cite{haas_experiences_nodate}. It would facilitate access for everyone, disabled and non-disabled people included, and improve public transportation for all users.
     \newline
     \newline
-    To help them gain independence in their daily journeys, people with ASD hope that new technologies will simplify their everyday live, with dedicated applications. They also expect robust training programs to help them navigate public spaces autonomously. Those programs should start in school curricula, to smoothen the transition between school and adult life \cite{deka_co-principal_nodate}. They also think that tailoring driver education programs should spread to address the existing interest in driving \cite{deka_co-principal_nodate}. 
+    To help them gain independence in their daily journeys, people with ASD expect new technologies to simplify their everyday life, for example with dedicated applications that consider their personal constraints. They would also be thankful for training programs to help them navigate public spaces autonomously. Those programs would start during the school curriculum, and smoothen the transition between school and adult life \cite{deka_co-principal_nodate}. Moreover, driver education programs should adapt to people with ASD to address their existing interest in driving \cite{deka_co-principal_nodate}. 
     \newline
     \newline
-    Their latest requests concern the general understanding of ASD and what is implied with it. They would like the set up of public education campaigns to enhance awareness among the general population about the characteristics of ASD. Those awareness campaigns will aim to facilitate community integration for adults with ASD. \cite{deka_co-principal_nodate}. They also want targeted training modules for transportation staff, like vehicle operators or front-line staff, so that people with ASD are easily understood and assisted \cite{haas_experiences_nodate}. 
+    Their requests finally address the global awareness about ASD by setting up public education campaigns to enhance awareness about the characteristics of ASD. Those awareness campaigns would aim to facilitate social integration for adults with ASD \cite{deka_co-principal_nodate}. They also want targeted training modules for transportation staff, like vehicle operators or front-line staff, to address issues specific to ASD more easily and increase comprehension and assistance with people with ASD \cite{haas_experiences_nodate}. 
 \newline
